fixed email link color contrast

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ main{
 	background: var(--main-background);
 }
 a:link {
-    color: green;
+    color: magenta;
     background-color: transparent;
     text-decoration: none;
   }
